--- a/wwwroot/stylesheet/Abstract/_variables.scss
+++ b/wwwroot/stylesheet/Abstract/_variables.scss
@@ -2,7 +2,6 @@
 $sh-primary-alt: #679DC0;
 $sh-secondary: #7DBE43;
 $sh-secondary-alt: #AED68A;
-
 $sh-black: #333333;
 $sh-dark-gray: #343A40;
 $sh-medium-gray: #666666; 
@@ -12,15 +11,12 @@ $sh-gray: #CCCCCC;
 $sh-warm-gray: #E5E5E5;
 $sh-light-gray: #F5F5F5;
 $sh-blue-gray: #EDF4FA;
-
 $sh-blue-gray: #f0f5f9;
 $sh-danger: #f60000;
-$primary: #0F0; //red
-
+$primary: #0F0; //
 $white: #ffffff;
 $navy: #0a192f;
 $indigo: #00ffff;
-
 $font-main: "Raleway", sans-serif;
 $font-main-header: "Playfair Display", serif;
 $font-secondary-header: "Raleway", sans-serif;
