--- a/wwwroot/stylesheet/Main.css
+++ b/wwwroot/stylesheet/Main.css
@@ -42,6 +42,8 @@
         background-color: #d5d9db;
         text-decoration: none;
         outline: none; }
+  .navbar-nav > li > a > numbering {
+    color: #E5E5E5; }
   .navbar-nav .dropdown-menu {
     font-size: 14px;
     background-color: #679DC0 !important;
@@ -97,12 +99,27 @@ nav.navbar {
   background: linear-gradient(#0a192f, #0a192f);
   outline-color: #00ffff; }
 
+.resume-button {
+  font-size: 14px;
+  color: #999999;
+  background-color: #0a192f;
+  margin-top: 10px;
+  border-color: #00ffff; }
+
 @media (min-width: 768px) {
   .navbar-brand.abs {
     position: absolute;
     width: 100%;
     left: 0;
     text-align: center; } }
+
+.numbering h1 {
+  color: #999999;
+  font: 14px; }
+
+.signature {
+  font: 14px;
+  color: #00ffff; }
 
 body {
   background: #0a192f; }
