--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">                
                 <ul class="navbar-nav ml-auto">
                     
-                    <li class="nav-item"><a class="nav-link" asp-page="/Home/AboutMe"> <numbering>01. </numbering>About Me </a></li>
+                    <li  class="nav-item"><a class="nav-link" asp-page="/Home/AboutMe"> <numbering>01. </numbering>  About Me </a></li>
                     <li class="nav-item"><a class="nav-link" asp-page="/Home/Experience"><numbering>02. </numbering>Experience</a></li>
                     <li class="nav-item"><a class="nav-link" asp-page="/Events/Index"><numbering>03. </numbering>Projects</a></li>
                     <li class="nav-item"><a class="nav-link" asp-page="/Home/Contact"><numbering>04. </numbering>Contact</a></li>
@@ -43,21 +43,27 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container-fluid">
+
+            <div class="row">
+
+
+                    <main role="main" class="pb-3">
+                        @RenderBody()
+                    </main>
+            </div>
+        
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Resume2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2020 - Resume2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @RenderSection("Scripts", required: false)
 </body>
 </html>
