Page loader added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,15 +3,15 @@
 }
     <base href="./" />
 
- <app-root></app-root>  @*//angular code will be rendered here*@
- <script type="text/javascript" src="~/NgApp/polyfills-es5.js"></script>
+ @*<app-root></app-root>*@  @*//angular code will be rendered here*@
+ @*<script type="text/javascript" src="~/NgApp/polyfills-es5.js"></script>
  <script type="text/javascript" src="~/NgApp/polyfills-es2015.js"></script>
  <script type="text/javascript" src="~/NgApp/vendor-es2015.js"></script>
  <script type="text/javascript" src="~/NgApp/vendor-es5.js"></script>
  <script type="text/javascript" src="~/NgApp/main-es2015.js"></script>
  <script type="text/javascript" src="~/NgApp/main-es5.js"></script>
  <script type="text/javascript" src="~/NgApp/runtime-es5.js"></script>
-  <script type="text/javascript" src="~/NgApp/runtime-es2015.js"></script>
+  <script type="text/javascript" src="~/NgApp/runtime-es2015.js"></script>*@
 
             
             
