- Page loader timing update

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,28 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-    <base href="./" />
+<base href="./" />
 
- @*<app-root></app-root>*@  @*//angular code will be rendered here*@
- @*<script type="text/javascript" src="~/NgApp/polyfills-es5.js"></script>
- <script type="text/javascript" src="~/NgApp/polyfills-es2015.js"></script>
- <script type="text/javascript" src="~/NgApp/vendor-es2015.js"></script>
- <script type="text/javascript" src="~/NgApp/vendor-es5.js"></script>
- <script type="text/javascript" src="~/NgApp/main-es2015.js"></script>
- <script type="text/javascript" src="~/NgApp/main-es5.js"></script>
- <script type="text/javascript" src="~/NgApp/runtime-es5.js"></script>
-  <script type="text/javascript" src="~/NgApp/runtime-es2015.js"></script>*@
+<app-root></app-root>  //angular code will be rendered here
+<script type="text/javascript" src="~/NgApp/polyfills-es5.js"></script>
+    <script type="text/javascript" src="~/NgApp/polyfills-es2015.js"></script>
+    <script type="text/javascript" src="~/NgApp/vendor-es2015.js"></script>
+    <script type="text/javascript" src="~/NgApp/vendor-es5.js"></script>
+    <script type="text/javascript" src="~/NgApp/main-es2015.js"></script>
+    <script type="text/javascript" src="~/NgApp/main-es5.js"></script>
+    <script type="text/javascript" src="~/NgApp/runtime-es5.js"></script>
+     <script type="text/javascript" src="~/NgApp/runtime-es2015.js"></script>
 
-            
-            
-        
-        
 
-        @*<script type="text/javascript" src="~/NgApp/polyfills.js"></script>
-        <script type="text/javascript" src="~/NgApp/styles.js"></script>
-        <script type="text/javascript" src="~/NgApp/vendor.js"></script>
-        <script type="text/javascript" src="~/NgApp/main.js"></script>
-        <script type="text/javascript" src="~/NgApp/runtime.js"></script>
-        <script type="text/javascript" src="~/NgApp/styles.js"></script>*@
+
+
+
+
+<script type="text/javascript" src="~/NgApp/polyfills.js"></script>
+    <script type="text/javascript" src="~/NgApp/styles.js"></script>
+    <script type="text/javascript" src="~/NgApp/vendor.js"></script>
+    <script type="text/javascript" src="~/NgApp/main.js"></script>
+    <script type="text/javascript" src="~/NgApp/runtime.js"></script>
+    <script type="text/javascript" src="~/NgApp/styles.js"></script>
 
 
