--- a/Angular/resume-angular-app/ClientApp/src/app/app.component.html
+++ b/Angular/resume-angular-app/ClientApp/src/app/app.component.html
@@ -1,4 +1,11 @@
 <body>
-  <app-nav-menu></app-nav-menu>
-  <app-home></app-home>  
+  <app-nav-menu></app-nav-menu>  
+  <div class="container">
+    <app-home></app-home>
+    <app-home></app-home>
+    <app-home></app-home>
+    <app-home></app-home>
+    <app-home></app-home>
+    <app-counter-component></app-counter-component>
+  </div>
 </body>
