--- a/Angular/resume-angular-app/ClientApp/src/app/app.component.html
+++ b/Angular/resume-angular-app/ClientApp/src/app/app.component.html
@@ -1,11 +1,9 @@
 <body>
   <app-nav-menu></app-nav-menu>  
-  <div class="container">
-    <app-home></app-home>
-    <app-home></app-home>
-    <app-home></app-home>
-    <app-home></app-home>
-    <app-home></app-home>
+  <div class="container">    
+    <app-intro></app-intro>
+    <app-aboutMe></app-aboutMe>
+    <app-experience></app-experience>
     <app-counter-component></app-counter-component>
   </div>
 </body>
